5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1590_1015.log
== TEST (2019-03-25 14:54:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(inpu("qual o valor de b? "))
c = int(input("qual o valor de c? "))
print(int(abs(max(a,b,c))))
print(int(abs(min(a,b,c))
-- ERROR:
File "XXXX", line 9
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:54:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(inpu("qual o valor de b? "))
c = int(input("qual o valor de c? "))
print(int(abs(max(a,b,c))))
print(int(abs(min(a,b,c)))
-- ERROR:
File "XXXX", line 9
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:54:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(inpu("qual o valor de b? "))
c = int(input("qual o valor de c? "))
print(int(abs(max(a,b,c))))
print(int(abs(min(a,b,c)))
-- ERROR:
File "XXXX", line 9
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:54:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(inpu("qual o valor de b? "))
c = int(input("qual o valor de c? "))
print(int(abs(max(a,b,c))))
print(int(min(a,b,c)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    b = int(inpu("qual o valor de b? "))
NameError: name 'inpu' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:54:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(input("qual o valor de b? "))
c = int(input("qual o valor de c? "))
print(int(abs(max(a,b,c))))
print(int(min(a,b,c)))
-- OUTPUT:
10
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:59:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(input("qual o valor de b? "))
c = int(input("qual o valor de c? "))
print(int(min(a,b,c)))
print(int(max(a,b,c))))

-- ERROR:
File "XXXX", line 8
    print(int(max(a,b,c))))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:59:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(input("qual o valor de b? "))
c = int(input("qual o valor de c? "))
print(int(min(a,b,c)))
print(int(max(a,b,c)))

-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:04:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(input("qual o valor de b? "))
c = int(input("qual o valor de c? "))
#calculo da soma dos três valores
var = a + b + c

#subtracao com o menor valor 
x = var - (min(a,b,c))
y var - (max(a,b,c))
print(int(min(a,b,c)))
print(int(min(x,y)))
print(int(max(a,b,c)))

-- ERROR:
File "XXXX", line 12
    y var - (max(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:04:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(input("qual o valor de b? "))
c = int(input("qual o valor de c? "))
#calculo da soma dos três valores
var = a + b + c

#subtracao com o menor valor 
x = var - (min(a,b,c))
y = var - (max(a,b,c))
print(int(min(a,b,c)))
print(int(min(x,y)))
print(int(max(a,b,c)))

-- OUTPUT:
-2
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:04:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(input("qual o valor de b? "))
c = int(input("qual o valor de c? "))
#calculo da soma dos três valores
var = a + b + c

#subtracao com o menor valor 
x = var - (min(a,b,c))
y = var - (max(a,b,c))
print(int(min(a,b,c)))
print(int(max(x,y)))
print(int(max(a,b,c)))

-- OUTPUT:
-2
10
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:04:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(input("qual o valor de b? "))
c = int(input("qual o valor de c? "))
#calculo da soma dos três valores
var = a + b + c

#subtracao com o menor valor 
x = var - (min(a,b,c))
y = var - (max(a,b,c))
print(int(min(a,b,c)))
print(int(max(x,y)))
print(int(max(a,b,c)))

-- OUTPUT:
-2
10
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:04:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(input("qual o valor de b? "))
c = int(input("qual o valor de c? "))
#calculo da soma dos três valores
var = a + b + c

#subtracao com o menor valor 
x = var - (min(a,b,c))
y = var - (max(a,b,c))
print(int(min(a,b,c)))
print(int(min(x,y)))
print(int(max(a,b,c)))

-- OUTPUT:
-2
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:05:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(input("qual o valor de b? "))
c = int(input("qual o valor de c? "))
#calculo da soma dos três valores
var = a + b + c

#subtracao com o menor valor 
x = (min(a,b,c)- var)
y = (max(a,b,c)- var)
print(int(min(a,b,c)))
print(int(min(x,y)))
print(int(max(a,b,c)))

-- OUTPUT:
-2
-10
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:05:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(input("qual o valor de b? "))
c = int(input("qual o valor de c? "))
#calculo da soma dos três valores
var = a + b + c

#subtracao com o menor valor 
x = (min(a,b,c)- var)
y = (max(a,b,c)- var)
print(int(min(a,b,c)))
print(int(min(x,y)))
print(int(max(a,b,c)))

-- OUTPUT:
-2
-10
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:06:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(input("qual o valor de b? "))
c = int(input("qual o valor de c? "))
#calculo da soma dos três valores
var = a + b + c

#subtracao com o menor valor 
x = var -(min(a,b,c))
y = var -(max(a,b,c))
print(int(min(a,b,c)))
print(int(min(x,y)))
print(int(max(a,b,c)))

-- OUTPUT:
-2
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:07:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(input("qual o valor de b? "))
c = int(input("qual o valor de c? "))
#calculo da soma dos três valores
var = a + b + c


-- OUTPUT:
-2
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:08:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(input("qual o valor de b? "))
c = int(input("qual o valor de c? "))
#calculo da soma dos três valores
var = a + b + c
print(var)

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:13:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(input("qual o valor de b? "))
c = int(input("qual o valor de c? "))

#valor intermediario
var = a + b + c
x = var -(min(a,b,c))
y = var -(max(a,b,c))

print(int(min(a,b,c)))
print(int()
print(int(max(a,b,c)))


-- ERROR:
File "XXXX", line 15
    print(int(max(a,b,c)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:13:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(input("qual o valor de b? "))
c = int(input("qual o valor de c? "))

#valor intermediario
var = a + b + c
x = var -(min(a,b,c))
y = var -(max(a,b,c))

print(int(min(a,b,c)))

print(int(max(a,b,c)))


-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:17:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(input("qual o valor de b? "))
c = int(input("qual o valor de c? "))

#valor intermediario
var = a + b + c
x = var -(min(a,b,c))
y = var -(max(a,b,c))


print(int(var))



-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:18:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(input("qual o valor de b? "))
c = int(input("qual o valor de c? "))

#valor intermediario
var = a + b + c
x = var -(min(a,b,c))
y = var -(max(a,b,c))


print(int(x,y))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(int(x,y))
ValueError: int() base must be >= 2 and <= 36, or 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:20:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(input("qual o valor de b? "))
c = int(input("qual o valor de c? "))

#valor intermediario
var = a + b + c
x = var -(min(a,b,c))
y = var -(max(a,b,c))

print(int(min(a,b,c)))
print(int())
print(int(max(a,b,c)))


-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:21:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(input("qual o valor de b? "))
c = int(input("qual o valor de c? "))

#valor intermediario
var = a + b + c
x = var -(min(a,b,c) - max(a,b,c))

print(int(min(a,b,c)))
print(int(x))
print(int(max(a,b,c)))


-- OUTPUT:
-2
20
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:21:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(input("qual o valor de b? "))
c = int(input("qual o valor de c? "))

#valor intermediario
var = a + b + c
x = (var -(min(a,b,c)) - max(a,b,c))

print(int(min(a,b,c)))
print(int(x))
print(int(max(a,b,c)))


-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:21:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("qual o valor de a? "))
b = int(input("qual o valor de b? "))
c = int(input("qual o valor de c? "))

#valor intermediario
var = a + b + c
x = (var -(min(a,b,c)) - max(a,b,c))

print(int(min(a,b,c)))
print(int(x))
print(int(max(a,b,c)))


-- EXECUTION TIME:
0.296454
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
